--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - run: ls -al /
+  
+  deploy:
+    needs: build-docker-image
+    name: deploy
+    runs-on: ubuntu-latest
+    steps: 
+      - run: ls -al /
