--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,56 +1,43 @@
-name: 빌드 및 배포
+name: 빌드 및 배포 
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build-docker-image: 
+  build-docker-image:
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - name: 원격저장소에서 소스를 복사
         uses: actions/checkout@v3
 
-      - name: 소스파일을 docker 이미지로 빌드한다
+      - name: 소스파일을 docker이미지로 빌드한다
         run: docker build -t conakr/my-fastapi-whoami:latest .
-
-      - name: docker hub에 로그인을 한다.
-        run: docker login -u conakr -p ${{ secrets.DOCKER_HUB_PASSWORD }}
       
-      - name: 생성된 이미지를 docker hub에 push 한다 
-        run: docker push conakr/my-fastapi-whoami:latest
+      - name: docker hub에 로그인을 한다
+        run: docker login -u conakr -p ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 이미지 빌드 단계
-        run: |
-          echo '이미지 빌드 1단계'
-          echo '이미지 빌드 2단계'
-          ls -la
+      - name: 생성된 이미지를 docker hub에 push 한다
+        run: docker push conakr/my-fastapi-whoami:latest
 
   deploy:
     needs: build-docker-image
     name: deploy
     runs-on: [ self-hosted, label-kosa]
-    steps: 
-      - name: 기존에 실행중인 서비스를 제거한다.
-        run: docker service rm my-fastapi-whoami
+    steps:
+      - name: 기존에 실행중인 서비스를 제거한다 
+        run: docker service rm my-fastapi-whoami-app
 
-      - name: docker hub에 로그인을 한다.
-        run: docker login -u conakr -p ${{ secrets.DOCKER_HUB_PASSWORD }}
-      
-      - name: 생성된 이미지를 docker hub에 pull로 내려 받는다. 
+      - name: docker hub에 로그인을 한다
+        run: docker login -u conakr -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: 생성된 이미지를 docker hub에 pull로 내려 받는다
         run: docker pull conakr/my-fastapi-whoami:latest
 
       - name: 서비스 실행
         run: |
           docker service create \
-          --name my-fastapi-whoami-app \
-          --publish published=8000,target=8000 \
-          --replicas 3 \
-          conakr/my-fastapi-whoami:latest  
-
-      - name: 서비스 확인
-        run: docker service ls
-        
-      - name: #서비스 테스트
-        run: curl 192.168.149.130:8000
-      
+                --name my-fastapi-whoami-app \
+                --publish published=8000,target=8000 \
+                --replicas 3 \
+                conakr/my-fastapi-whoami:latest      
