--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
     name: deploy
     runs-on: [ self-hosted, label-kosa]
     steps:
-      # - name: 기존에 실행중인 서비스를 제거한다 
-      #   run: docker service rm my-fastapi-whoami-app
+      - name: 기존에 실행중인 서비스를 제거한다 
+        run: docker service rm my-fastapi-whoami-app
 
       - name: docker hub에 로그인을 한다
         run: docker login -u ${{ env.USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
